// Copyright 2022 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message VertexAlphaModelDeployment {
  string model = 1;
  string id = 2;
  VertexAlphaModelDeploymentDedicatedResources dedicated_resources = 3;
  string endpoint = 4;
  string location = 5;
  string project = 6;
}

message VertexAlphaModelDeploymentDedicatedResources {
  VertexAlphaModelDeploymentDedicatedResourcesMachineSpec machine_spec = 1;
  int64 min_replica_count = 2;
  int64 max_replica_count = 3;
}

message VertexAlphaModelDeploymentDedicatedResourcesMachineSpec {
  string machine_type = 1;
}

message ApplyVertexAlphaModelDeploymentRequest {
  VertexAlphaModelDeployment resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteVertexAlphaModelDeploymentRequest {
  string service_account_file = 1;
  VertexAlphaModelDeployment resource = 2;
}

message ListVertexAlphaModelDeploymentRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
  string Endpoint = 4;
}

message ListVertexAlphaModelDeploymentResponse {
  repeated VertexAlphaModelDeployment items = 1;
}

service VertexAlphaModelDeploymentService {
  rpc ApplyVertexAlphaModelDeployment(ApplyVertexAlphaModelDeploymentRequest) returns (VertexAlphaModelDeployment);
  rpc DeleteVertexAlphaModelDeployment(DeleteVertexAlphaModelDeploymentRequest) returns (google.protobuf.Empty);
  rpc ListVertexAlphaModelDeployment(ListVertexAlphaModelDeploymentRequest) returns (ListVertexAlphaModelDeploymentResponse);
}
